--- a/home.html
+++ b/home.html
@@ -257,7 +257,7 @@
             </div>
             <div dir="auto" class="card">
                 <h3 dir="auto">المقالات الشائعة</h3>
-                <img src="image/lUlBu.jp" alt="Image" width="200" height="200" class="img">
+                <img src="image/lUlBu.jpg" alt="Image" width="200" height="200" class="img">
                 <h2>بطولة السوبر ليغ<h2>
                         <p>بيريز يريد إقامة بطولة السوبر ليغ، وهو المشروع الذي يحاربه الاتحاد الأوروبي. وأكد بيريز عن
                             الدور الذي يقوم به من أجل إقامة بطولة السوبر ليغ، حيثُ إعتبر أن إقامة السوبر ليغ ضرورة
