--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <label >Enter Your Email </label>
             </div>
                 <label style="color: black;">password</label><br>
-                <div class="input-container">
+                <div class="input-container1">
                 <input name="password" type="password" class="input" placeholder="" id="password"
                     minlength="6" required>
                     <label>Enter Your password</label>
