--- a/roport.html
+++ b/roport.html
@@ -22,9 +22,9 @@
         <h1> أهلا وسهلا بكم إن كان قد واجهتكم مشكلة يرجى ملئ أدناه</h1>
         <form action="">
             <label class="label">هل هذه المشكلة قد ظهرت لك من قبل </label><br><br>
-            <input type="text" class="inputr1" placeholder="Answer with yas or No " required><br><br><br><br>
+            <input type="text" class="inputr1" placeholder="Answer with yes or No " required><br><br><br><br>
             <label class="label"></label> هل قمت بتفحص ما إذا كان الاتصال بالانترنت لديك سليم<br><br>
-            <input type="text" class="inputr1" placeholder="Answer with yas or No " required><br><br><br><br>
+            <input type="text" class="inputr1" placeholder="Answer with yes or No " required><br><br><br><br>
             <label>إذا كنت فعلت ذلك ومازالت المشكلة يرجى وصف المشكلة وسنحاول إجاد الحل في اسرع وقت ممكن</label><br><br>
             <input type="text" class="inputr2" placeholder="Describe Your Problem " required><br><br><br><br>
             <input type="submit" class="sub" type="submit" value="Send" >
