--- a/TheTeam.html
+++ b/TheTeam.html
@@ -21,7 +21,7 @@
         <h1>من نحن</h1>
         <br>
         <hr>
-        <h2>نحن مجموعة من الطلاب ندرس في الجامعة الدولية للعلوم والنهة بدأنا الدراسة في الجامعة في عام 2022 طبعا نحن من
+        <h2>نحن مجموعة من الطلاب ندرس في الجامعة الدولية للعلوم والنهضة بدأنا الدراسة في الجامعة في عام 2022 طبعا نحن من
             بقاع مختلفة
             <br>
             وذلك بسبب الوضع الراهن في سوريا نأمل من الله أن يفرج عنا قريباً وأن يخلصنا من طاغية الشام
