--- a/TheTeam.html
+++ b/TheTeam.html
@@ -55,7 +55,7 @@
     <div class="content">Loading</div>
     <center>
         <h1 class="h11">Connect with us</h1>
-        <ul>
+        >!--<ul>
             <div class="DI">
                 <a href="https://www.facebook.com/AboBakr015?mibextid=ZbWKwL" class="icon"><i
                         class="fa-brands fa-facebook"></i></a>
@@ -68,8 +68,197 @@
                         class="fa-brands fa-x-twitter"></i></a>
             </div>
             <div id="marker"></div>
-        </ul>
+        </ul>--<
     </center>
+
+ <div class="body">
+
+      <!-- instagram -->
+      <div class="tooltip-container">
+          <div class="tooltip">
+              <div class="profile">
+                  <div class="user">
+                      <div class="img">A</div>
+                      <div class="details">
+                          <div class="name">AboBakr</div>
+                          <div class="username">@abobakr015</div>
+                      </div>
+                  </div>
+                  <div class="about">176 + Followers</div>
+              </div>
+          </div>
+          <div class="text">
+              <a class="icon" href="https://www.instagram.com/abobakr015?igsh=MXJuNGo3a3M0M2ExNA==/web_leb">
+                  <div class="layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="instagramSVG">
+                          <br>
+                          <center> <i class="fa-brands fa-instagram"></i></center>
+                      </span>
+                  </div>
+                  <div class="text">Instagram</div>
+              </a>
+          </div>
+      </div>
+      <!-- facebook -->
+      <div class="tooltip-container">
+          <div class="tooltip">
+              <div class="profile">
+                  <div class="user">
+                      <div class="img">A</div>
+                      <div class="details">
+                          <div class="name">AboBakr</div>
+                          <div class="username">@abobakr015</div>
+                      </div>
+                  </div>
+                  <div class="about">145 + Followers</div>
+              </div>
+          </div>
+          <div class="text">
+              <a class="icon" href="https://www.facebook.com/AboBakr015?mibextid=ZbWKwL/web_leb">
+                  <div class="layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="instagramSVG">
+                          <br>
+                          <center> <i class="fa-brands fa-facebook" style="color: rgba(0, 0, 255, 0.658);"></i>
+                          </center>
+                      </span>
+                  </div>
+                  <div class="text">Facebook</div>
+              </a>
+          </div>
+      </div>
+      <!-- x -->
+      <div class="tooltip-container">
+          <div class="tooltip">
+              <div class="profile">
+                  <div class="user">
+                      <div class="img">م</div>
+                      <div class="details">
+                          <div class="name"> مصطفى المحمد(أبو بكر الشامي)</div>
+                          <div class="username">@Abo_bakr2_7</div>
+                      </div>
+                  </div>
+                  <div class="about">19 + Followers</div>
+              </div>
+          </div>
+          <div class="text">
+              <a class="icon" href="https://x.com/Abo_bakr2_7?t=Z80zhz2uhrMPUqg9PjuKiA&s=08/web_leb">
+                  <div class="layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="instagramSVG">
+                          <br>
+                          <center> <i class="fa-brands fa-x-twitter" style="color: rgba(2, 41, 41, 0.856);"></i>
+                          </center>
+                      </span>
+                  </div>
+                  <div class="text" style="color: rgba(47, 255, 255, 0.856);">Twitter(x)</div>
+              </a>
+          </div>
+      </div>
+      <!-- telegram -->
+      <div class="tooltip-container">
+          <div class="tooltip">
+              <div class="profile">
+                  <div class="user">
+                      <div class="img">أ</div>
+                      <div class="details">
+                          <div class="name">أبو بكر الشامي</div>
+                          <div class="username">@AboBakr02</div>
+                      </div>
+                  </div>
+                  <div class="about">00905342689778 N_phone</div>
+              </div>
+          </div>
+          <div class="text">
+              <a class="icon" href="https://t.me/AboBakr02/web_leb">
+                  <div class="layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="instagramSVG">
+                          <br>
+                          <center> <i class="fa-brands fa-telegram" style="color: rgba(0, 183, 255, 0.39);"></i>
+                          </center>
+                      </span>
+                  </div>
+                  <div class="text" style="color: rgba(0, 183, 255, 0.39);">Telegram</div>
+              </a>
+          </div>
+      </div>
+      <!-- whatsapp -->
+      <div class="tooltip-container">
+          <div class="tooltip">
+              <div class="profile">
+                  <div class="user">
+                      <div class="img">أ</div>
+                      <div class="details">
+                          <div class="name">أبو بكر الشامي</div>
+                          <div class="username">@abobakr015</div>
+                      </div>
+                  </div>
+                  <div class="about">00905342689778 N_phone</div>
+              </div>
+          </div>
+          <div class="text">
+              <a class="icon" href="https://wa.me/qr/JCN2EQSSAA5UL1/web_leb">
+                  <div class="layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="instagramSVG">
+                          <br>
+                          <center> <i class="fa-brands fa-whatsapp" style="color: greenyellow;"></i></center>
+                      </span>
+                  </div>
+                  <div class="text" style="color: greenyellow;">WhatsApp</div>
+              </a>
+          </div>
+      </div>
+      <!-- Masenger -->
+      <div class="tooltip-container">
+          <div class="tooltip">
+              <div class="profile">
+                  <div class="user">
+                      <div class="img">A</div>
+                      <div class="details">
+                          <div class="name">AboBakr</div>
+                          <div class="username">@abobakr015</div>
+                      </div>
+                  </div>
+                  <div class="about">145+ Followers</div>
+              </div>
+          </div>
+          <div class="text">
+              <a class="icon" href="https://m.me/AboBakr015/web_leb">
+                  <div class="layer">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span class="instagramSVG">
+                          <br>
+                          <center> <i class="fa-brands fa-facebook-messenger"></i></center>
+                      </span>
+                  </div>
+                  <div class="text">Messenger</div>
+              </a>
+          </div>
+      </div>
+
+
+  </div>
     <script src="Script.js"></script>
 </body>
 
