--- a/TheTeam.html
+++ b/TheTeam.html
@@ -78,7 +78,7 @@
           <div class="tooltip">
               <div class="profile">
                   <div class="user">
-                      <div class="img">A</div>
+                      <div class="img1">A</div>
                       <div class="details">
                           <div class="name">AboBakr</div>
                           <div class="username">@abobakr015</div>
