--- a/TheTeam.html
+++ b/TheTeam.html
@@ -108,7 +108,7 @@
           <div class="tooltip">
               <div class="profile">
                   <div class="user">
-                      <div class="img">A</div>
+                      <div class="img1">A</div>
                       <div class="details">
                           <div class="name">AboBakr</div>
                           <div class="username">@abobakr015</div>
@@ -139,7 +139,7 @@
           <div class="tooltip">
               <div class="profile">
                   <div class="user">
-                      <div class="img">م</div>
+                      <div class="img1">م</div>
                       <div class="details">
                           <div class="name"> مصطفى المحمد(أبو بكر الشامي)</div>
                           <div class="username">@Abo_bakr2_7</div>
@@ -170,7 +170,7 @@
           <div class="tooltip">
               <div class="profile">
                   <div class="user">
-                      <div class="img">أ</div>
+                      <div class="img1">أ</div>
                       <div class="details">
                           <div class="name">أبو بكر الشامي</div>
                           <div class="username">@AboBakr02</div>
@@ -201,7 +201,7 @@
           <div class="tooltip">
               <div class="profile">
                   <div class="user">
-                      <div class="img">أ</div>
+                      <div class="img1">أ</div>
                       <div class="details">
                           <div class="name">أبو بكر الشامي</div>
                           <div class="username">@abobakr015</div>
