--- a/TheTeam.html
+++ b/TheTeam.html
@@ -8,7 +8,9 @@
     <link rel="icon" href="image/iconteem.icon" class="icon11">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="style2.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+  integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 
@@ -70,195 +72,39 @@
             <div id="marker"></div>
         </ul>--> 
     </center>
-
- <div class="body">
-
-      <!-- instagram -->
-      <div class="tooltip-container">
-          <div class="tooltip">
-              <div class="profile">
-                  <div class="user">
-                      <div class="img1">A</div>
-                      <div class="details">
-                          <div class="name">AboBakr</div>
-                          <div class="username">@abobakr015</div>
-                      </div>
-                  </div>
-                  <div class="about">176 + Followers</div>
-              </div>
-          </div>
-          <div class="text">
-              <a class="icon" href="https://www.instagram.com/abobakr015?igsh=MXJuNGo3a3M0M2ExNA==/web_leb">
-                  <div class="layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="instagramSVG">
-                          <br>
-                          <center> <i class="fa-brands fa-instagram"></i></center>
-                      </span>
-                  </div>
-                  <div class="text">Instagram</div>
-              </a>
-          </div>
-      </div>
-      <!-- facebook -->
-      <div class="tooltip-container">
-          <div class="tooltip">
-              <div class="profile">
-                  <div class="user">
-                      <div class="img1">A</div>
-                      <div class="details">
-                          <div class="name">AboBakr</div>
-                          <div class="username">@abobakr015</div>
-                      </div>
-                  </div>
-                  <div class="about">145 + Followers</div>
-              </div>
-          </div>
-          <div class="text">
-              <a class="icon" href="https://www.facebook.com/AboBakr015?mibextid=ZbWKwL/web_leb">
-                  <div class="layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="instagramSVG">
-                          <br>
-                          <center> <i class="fa-brands fa-facebook" style="color: rgba(0, 0, 255, 0.658);"></i>
-                          </center>
-                      </span>
-                  </div>
-                  <div class="text">Facebook</div>
-              </a>
-          </div>
-      </div>
-      <!-- x -->
-      <div class="tooltip-container">
-          <div class="tooltip">
-              <div class="profile">
-                  <div class="user">
-                      <div class="img1">م</div>
-                      <div class="details">
-                          <div class="name"> مصطفى المحمد(أبو بكر الشامي)</div>
-                          <div class="username">@Abo_bakr2_7</div>
-                      </div>
-                  </div>
-                  <div class="about">19 + Followers</div>
-              </div>
-          </div>
-          <div class="text">
-              <a class="icon" href="https://x.com/Abo_bakr2_7?t=Z80zhz2uhrMPUqg9PjuKiA&s=08/web_leb">
-                  <div class="layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="instagramSVG">
-                          <br>
-                          <center> <i class="fa-brands fa-x-twitter" style="color: rgba(2, 41, 41, 0.856);"></i>
-                          </center>
-                      </span>
-                  </div>
-                  <div class="text" style="color: rgba(47, 255, 255, 0.856);">Twitter(x)</div>
-              </a>
-          </div>
-      </div>
-      <!-- telegram -->
-      <div class="tooltip-container">
-          <div class="tooltip">
-              <div class="profile">
-                  <div class="user">
-                      <div class="img1">أ</div>
-                      <div class="details">
-                          <div class="name">أبو بكر الشامي</div>
-                          <div class="username">@AboBakr02</div>
-                      </div>
-                  </div>
-                  <div class="about">00905342689778 N_phone</div>
-              </div>
-          </div>
-          <div class="text">
-              <a class="icon" href="https://t.me/AboBakr02/web_leb">
-                  <div class="layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="instagramSVG">
-                          <br>
-                          <center> <i class="fa-brands fa-telegram" style="color: rgba(0, 183, 255, 0.39);"></i>
-                          </center>
-                      </span>
-                  </div>
-                  <div class="text" style="color: rgba(0, 183, 255, 0.39);">Telegram</div>
-              </a>
-          </div>
-      </div>
-      <!-- whatsapp -->
-      <div class="tooltip-container">
-          <div class="tooltip">
-              <div class="profile">
-                  <div class="user">
-                      <div class="img1">أ</div>
-                      <div class="details">
-                          <div class="name">أبو بكر الشامي</div>
-                          <div class="username">@abobakr015</div>
-                      </div>
-                  </div>
-                  <div class="about">00905342689778 N_phone</div>
-              </div>
-          </div>
-          <div class="text">
-              <a class="icon" href="https://wa.me/qr/JCN2EQSSAA5UL1/web_leb">
-                  <div class="layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="instagramSVG">
-                          <br>
-                          <center> <i class="fa-brands fa-whatsapp" style="color: greenyellow;"></i></center>
-                      </span>
-                  </div>
-                  <div class="text" style="color: greenyellow;">WhatsApp</div>
-              </a>
-          </div>
-      </div>
-      <!-- Masenger -->
-      <div class="tooltip-container">
-          <div class="tooltip">
-              <div class="profile">
-                  <div class="user">
-                      <div class="img1">A</div>
-                      <div class="details">
-                          <div class="name">AboBakr</div>
-                          <div class="username">@abobakr015</div>
-                      </div>
-                  </div>
-                  <div class="about">145+ Followers</div>
-              </div>
-          </div>
-          <div class="text">
-              <a class="icon" href="https://m.me/AboBakr015/web_leb">
-                  <div class="layer">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span class="instagramSVG">
-                          <br>
-                          <center> <i class="fa-brands fa-facebook-messenger"></i></center>
-                      </span>
-                  </div>
-                  <div class="text">Messenger</div>
-              </a>
-          </div>
+<center>
+    <div class="main">
+        <a class="carde" href="https://www.instagram.com/abobakr015?igsh=MXJuNGo3a3M0M2ExNA==">
+          <span class="instagram"><i class="fab fa-instagram" style="color: rgba(150, 24, 155, 0.726);"></i></span>
+        </a>
+        <a class="carde" href="https://x.com/Abo_bakr2_7?t=Z80zhz2uhrMPUqg9PjuKiA&s=08" >
+          <span class="twitter"><i class="fab fa-x-twitter" style="color: rgba(5, 34, 34, 0.411);"></i></span>
+        </a>
+        <a class="carde"  href="https://m.me/AboBakr015">
+          <span class="messenger"><i class="fab fa-facebook-messenger" style="color: rebeccapurple;"></i></span>
+        </a>
+        <a class="carde" href="https://www.facebook.com/AboBakr015?mibextid=ZbWKwL">
+          <span  class="facebook"><i class="fab fa-facebook" style="color: rgba(0, 0, 255, 0.5);" ></i></span>
+        </a>
+        <div class="carde">
+    
+        </div>
+        <a class="carde" href="https://www.threads.net/@abobakr015">
+          <span class="discord"><i class="fab fa-threads" style="color: black"></i></span>
+        </a>
+        <a class="carde" href="https://github.com/abobakr015/moos">
+          <span class="github"><i class="fab fa-github" style="color: black;"></i></span>
+        </a>
+        <a class="carde" href="https://t.me/AboBakr02">
+          <span class="telegram"><i class="fab fa-telegram"  style="color: rgba(0, 183, 255, 0.39);"></i></span>
+        </a>
+        <a class="carde" href="https://youtube.com/@abobakr015?feature=shared">
+          <span class="youtube"><i class="fab fa-youtube" style="color: rgba(255, 0, 0, 0.582);"></i></span>
+        </a>
+        <p class="text">Our Socials</p>
+        <div class="main_back"></div>
       </div>
 
-
-  </div>
     <script src="Script.js"></script>
 </body>
 
