--- a/TheTeam.html
+++ b/TheTeam.html
@@ -53,8 +53,7 @@
 
     <div class="content">Loading</div>
     <center>
-        <h1 class="h11"style="background: rgb(34,193,195);
-background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);">Connect with us</h1>
+        <h1 class="h11"style="color:#ffb6d4;">Connect with us</h1>
 <br> 
         <!--<ul>
             <div class="DI">
