--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="image/icon.icon" class="icon11">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="style2.css">
-    <link rel="icon-home" href="../image/imageLogin1.jpg">
+    <link rel="icon-home" href="image/imageLogin1.jpg">
 </head>
 
 <body dir="auto">
