--- a/TheTeam.html
+++ b/TheTeam.html
@@ -96,8 +96,8 @@
         <a class="carde" href="https://t.me/AboBakr02">
           <span class="telegram"><i class="fab fa-telegram"  style="color: rgba(0, 183, 255, 0.39);"></i></span>
         </a>
-        <a class="carde" href="https://youtube.com/@abobakr015?feature=shared">
-          <span class="youtube"><i class="fab fa-youtube" style="color: rgba(255, 0, 0, 0.582);"></i></span>
+        <a class="carde" href="https://wa.me/qr/JCN2EQSSAA5UL1">
+          <span class="youtube"><i class="fa-brands fa-whatsapp" style="color: greenyellow;"></i></span>
         </a>
         <p class="text">Our Socials</p>
         <div class="main_back"></div>
