--- a/indexTeem.html
+++ b/indexTeem.html
@@ -57,7 +57,7 @@
         <li>
           <article class="card" data-visible="false">
             <div class="card__front flow-content">
-              <img class="card__img mx-auto" src="image/omarsh.jpg" />
+              <img class="card__img mx-auto" src="image/Omarsh.jpg" />
               <div class="flow-content" data-spacing="sm">
                 <p class="card__name">Omar Al Sheleh</p>
                 <p class="card__position">طالبب هندسة معلوماتية</p>
