--- a/indexTeem.html
+++ b/indexTeem.html
@@ -60,7 +60,7 @@
               <img class="card__img mx-auto" src="image/Omarsh.jpg" />
               <div class="flow-content" data-spacing="sm">
                 <p class="card__name">Omar Al Sheleh</p>
-                <p class="card__position">طالبب هندسة معلوماتية</p>
+                <p class="card__position">طالب هندسة معلوماتية</p>
               </div>
             </div>
             <div class="card__back flow-content">
